# cpputil

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  cpputil.sln
cpputil/: CMakeLists.txt  cpputil.hpp
cpputil/algorithm/: adjacent_find.hpp  algorithm.hpp  all_of.hpp  any_of.hpp  clamp.hpp  copy_backward.hpp  copy_n.hpp  count.hpp  fill.hpp  fill_n.hpp  find.hpp  find_end.hpp  find_first_of.hpp  for_each.hpp  max.hpp  max_element.hpp  md_seq_ops.hpp  min.hpp  min_element.hpp  minmax.hpp  minmax_element.hpp  minmax_ops.hpp  mismatch.hpp  move.hpp  move_backward.hpp  non_md_seq_ops.hpp  none_of.hpp  predicates.hpp  range_check.hpp  search.hpp
cpputil/functional/: functional.hpp  not_fn.hpp  operator_functors.hpp  reference_wrapper.hpp  sequence_call.hpp
cpputil/iterator/: distance.hpp  iterator.hpp  iterator_operations.hpp  iterator_tags.hpp  iterator_traits.hpp  next.hpp  prev.hpp  range_access.hpp
cpputil/memory/: addressof.hpp  destroy.hpp  memory.hpp
cpputil/src/algorithm/: algorithm.hpp  count.hpp  find.hpp  for_each.hpp  op_of.hpp
cpputil/src/functional/: functional.hpp
cpputil/src/iterator/: distance.hpp  iterator.hpp  iterator_tags.hpp  iterator_traits.hpp  next.hpp  prev.hpp
cpputil/src/thread/: hierarchical_mutex.cpp  hierarchical_mutex.hpp  thread.hpp
cpputil/src/traits/: add_cv.hpp  add_pointer.hpp  add_volatile.hpp  conditional.hpp  decay.hpp  identity.hpp  integral_constant.hpp  is_contained_in.hpp  is_readable_from_stream.hpp  is_volatile.hpp  remove_cv.hpp  remove_extent.hpp  remove_volatile.hpp  void_t.hpp
cpputil/src/utility/: utility.hpp
cpputil/thread/: always_async.hpp  async.hpp  hierarchical_mutex.cpp  hierarchical_mutex.hpp  scoped_thread.hpp  spinlock_mutex.hpp  thread.hpp  threads_joiner.hpp
cpputil/traits/: add_const.hpp  add_cv.hpp  add_lvalue_reference.hpp  add_pointer.hpp  add_rvalue_reference.hpp  add_volatile.hpp  alignment_of.hpp  conditional.hpp  decay.hpp  declval.hpp  enable_if.hpp  enable_if_test.cpp  extent.hpp  identity.hpp  integral_constant.hpp  is_array.hpp  is_bounded_array.hpp  is_const.hpp  is_contained_in.hpp  is_function.hpp  is_lvalue_reference.hpp  is_null_pointer.hpp  is_readable_from_stream.hpp  is_rvalue_reference.hpp  is_same.hpp  is_unbounded_array.hpp  is_void.hpp  is_volatile.hpp  is_writable_to_stream.hpp  rank.hpp  remove_const.hpp  remove_cv.hpp  remove_extent.hpp  remove_pointer.hpp  remove_reference.hpp  remove_volatile.hpp  traits.hpp  type_identity.hpp  void_t.hpp
cpputil/utility/: apply.hpp  as_const.hpp  exchange.hpp  foreach_argument.hpp  forward.hpp  integer_sequence.hpp  literals.hpp  move.hpp  utility.hpp
include/: cpputil.h  cpputil.hpp
test/: CMakeLists.txt  CMakeLists.txt.in  apply_test.cpp  apply_test_types.hpp  argument_count_test.cpp  argument_count_test_types.hpp  as_const_test.cpp  basic_functors_test.cpp  exchange_test.cpp  foreach_argument_test.cpp  foreach_argument_test_types.hpp  forward_test.cpp  gtest.hpp  is_volatile_test.cpp  literals_test.cpp  move_test.cpp  not_fn_test.cpp  not_fn_test_helper.hpp  not_fn_test_types.hpp  operator_functors_test.cpp  packer_test.cpp  reference_wrapper_test.cpp  remove_reference_test.cpp  rename_type_test.cpp  scoped_thread_test.cpp  sequence_call_test.cpp  test.vcxproj  test_types.h  traits.h  traits_test.cpp  transform_type_test.cpp  type_rename_test.cpp  types.hpp
test/algorithm/: adjacent_find_test.cpp  common.hpp  copy_backward_test.cpp  copy_if_test.cpp  copy_n_test.cpp  copy_test.cpp  count_test.cpp  count_test.hpp  fill_n_test.cpp  fill_test.cpp  find_end_test.cpp  find_first_of_test.cpp  find_test.cpp  for_each_test.cpp  minmax_ops_test.cpp  mismatch_test.cpp  move_backward_test.cpp  move_test.cpp  op_of.cpp  op_of_test.cpp  range_check_test.cpp  search_test.cpp
test/functional/: not_fn_test.cpp  not_fn_types.hpp  operator_functors_test.cpp  reference_wrapper_test.cpp  sequence_call_test.cpp
test/iterator/: advance_test.cpp  distance_test.cpp  iterator_mocks.hpp  iterator_traits_test.cpp  next_test.cpp  prev_test.cpp  range_access_test.cpp  range_mocks.hpp
test/memory/: addressof_test.cpp  destroy_test.cpp
test/test/: gtest.hpp
test/thread/: always_async_test.cpp  async_test.cpp  hierarchical_mutex_test.cpp  scoped_thread_test.cpp  spinlock_mutex_test.cpp  threads_joiner_test.cpp
test/traits/: add_const_test.cpp  add_cv_test.cpp  add_lvalue_reference_test.cpp  add_pointer_test.cpp  add_volatile_test.cpp  alignment_of_test.cpp  decay_test.cpp  extent_test.cpp  identity_test.cpp  integral_constant_test.cpp  is_array_test.cpp  is_bounded_array_test.cpp  is_const_test.cpp  is_contained_in_test.cpp  is_function_test.cpp  is_lvalue_reference_test.cpp  is_null_pointer_test.cpp  is_readable_from_stream_test.cpp  is_readable_from_stream_test_types.hpp  is_rvalue_reference_test.cpp  is_same_test.cpp  is_unbounded_array_test.cpp  is_void_test.cpp  is_volatile_test.cpp  is_writable_to_stream_test.cpp  is_writable_to_stream_test_types.hpp  rank_test.cpp  remove_const_test.cpp  remove_cv_test.cpp  remove_extent_test.cpp  remove_pointer_test.cpp  remove_reference_test.cpp  remove_volatile_test.cpp  type_identity_test.cpp  void_t_test.cpp
test/traits_tests/: add_const_test.cpp  add_cv_test.cpp  add_lvalue_reference_test.cpp  add_pointer_test.cpp  add_volatile_test.cpp  decay_test.cpp  identity_test.cpp  integral_constant_test.cpp  is_array_test.cpp  is_const_test.cpp  is_contained_in_test.cpp  is_function_test.cpp  is_readable_from_stream_test.cpp  is_readable_from_stream_test_types.hpp  is_same_test.cpp  is_volatile_test.cpp  is_writable_to_stream_test_types.hpp  remove_const_test.cpp  remove_cv_test.cpp  remove_extent.cpp  remove_extent_test.cpp  remove_pointer_test.cpp  remove_reference_test.cpp  remove_volatile_test.cpp  void_t_test.cpp
test/utility/: apply_test.cpp  apply_test_types.hpp  as_const_test.cpp  exchange_test.cpp  exchange_test_types.hpp  foreach_argument_test.cpp  foreach_argument_test_types.hpp  forward_test.cpp  integer_sequence_test.cpp  literals_test.cpp  move_test.cpp  move_test_types.hpp
(+85 files in other folders)
